// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsSection SettingsSection.FieldWrapper renders correctly with label 1`] = `
<label
  style={
    Object {
      "display": "block",
      "marginBottom": "15px",
    }
  }
>
  <span
    style={
      Object {
        "display": "block",
        "fontWeight": "bold",
        "marginBottom": "4px",
      }
    }
  >
    test label
  </span>
  <input
    type="text"
  />
</label>
`;

exports[`SettingsSection SettingsSection.FieldWrapper renders correctly without label 1`] = `
<div
  style={
    Object {
      "display": "block",
      "marginBottom": "15px",
    }
  }
>
  <input
    type="text"
  />
</div>
`;

exports[`SettingsSection SettingsSection.Footer renders correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "marginTop": "10px",
    }
  }
>
  <button>
    test
  </button>
</div>
`;

exports[`SettingsSection renders correctly 1`] = `
<Fragment>
  <div
    style={
      Object {
        "backgroundColor": "white",
        "border": "solid 1px rgba(210, 210, 210, 1)",
        "padding": "12px",
      }
    }
  >
    <span>
      test
    </span>
  </div>
</Fragment>
`;

exports[`SettingsSection renders correctly while isLoading 1`] = `
<Fragment>
  <span
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "color": "white",
        "display": "flex",
        "fontSize": "1.5em",
        "height": 0,
        "justifyContent": "center",
        "position": "absolute",
        "width": "calc(100% - 24px)",
      }
    }
  >
    Loading...
  </span>
  <div
    style={
      Object {
        "backgroundColor": "white",
        "border": "solid 1px rgba(210, 210, 210, 1)",
        "padding": "12px",
      }
    }
  >
    <span>
      test
    </span>
  </div>
</Fragment>
`;
